Modified delete HTTP code
